--- a/platformio.ini
+++ b/platformio.ini
@@ -12,4 +12,7 @@
 platform = espressif32
 board = esp32dev
 framework = arduino
-lib_deps = madhephaestus/ESP32Servo@^3.0.5
+lib_deps = 
+	madhephaestus/ESP32Servo@^3.0.5
+	bblanchon/ArduinoJson@^7.2.0
+monitor_speed = 115200
