--- a/platformio.ini
+++ b/platformio.ini
@@ -8,11 +8,19 @@
 ; Please visit documentation for the other options and examples
 ; https://docs.platformio.org/page/projectconf.html
 
-[env:esp32dev]
+[env:esp32-s3-devkitc-1]
 platform = espressif32
-board = esp32dev
+board = esp32-s3-devkitc-1
 framework = arduino
 lib_deps = 
 	madhephaestus/ESP32Servo@^3.0.5
 	bblanchon/ArduinoJson@^7.2.0
 monitor_speed = 115200
+
+board_build.arduino.memory_type = qio_qspi
+board_build.flash_mode = qio
+board_build.psram_type = qio
+board_upload.flash_size = 16MB
+board_upload.maximum_size = 16777216
+board_build.extra_flags = 
+	-DBOARD_HAS_PSRAM
