--- a/platformio.ini
+++ b/platformio.ini
@@ -17,9 +17,9 @@ lib_deps =
 	bblanchon/ArduinoJson@^7.2.0
 monitor_speed = 115200
 
-board_build.arduino.memory_type = qio_qspi
+board_build.arduino.memory_type = qio_opi ; NEEDED FOR PSRAM
 board_build.flash_mode = qio
-board_build.psram_type = qio
+board_build.psram_type = opi
 board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
 board_build.extra_flags = 
