--- a/platformio.ini
+++ b/platformio.ini
@@ -15,6 +15,7 @@ framework = arduino
 lib_deps = 
 	madhephaestus/ESP32Servo@^3.0.5
 	bblanchon/ArduinoJson@^7.2.0
+	fastled/FastLED@^3.8.0
 monitor_speed = 115200
 
 board_build.arduino.memory_type = qio_opi ; NEEDED FOR PSRAM
